--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   supabase_flutter: ^2.8.3
+  image_picker: ^1.1.2
   provider: ^6.1.2
   shared_preferences: ^2.5.2
   cache_audio_player_plus: ^1.1.0
